# rustds

./: Cargo.toml  README.md
lmms-drum-synth-samples/misc_electro/: slide_tom.ds
lmms-drum-synth-sys/: Cargo.toml  build.rs
lmms-drum-synth-sys/src/: DrumSynth.cpp  DrumSynth.hpp  lmms_basics.hpp
mutate/: Cargo.toml
mutate-derive/: Cargo.toml
mutate-derive/src/: lib.rs
mutate-derive/tests/: derive.rs
mutate/src/: lib.rs
rds/: Cargo.toml
rds-studio/: Cargo.toml
rds-studio/src/: main.rs
rds-studio/ui/: main.glade  main.glade~
rds/src/: lib.rs
src/: ds_rewrite.rs  main.rs
tests/lmms_drum_synth_samples/misc_electro/: atmosphere_of_space.ds
